--- a/Bunk-o-Meter.html
+++ b/Bunk-o-Meter.html
@@ -91,7 +91,7 @@
       100% { transform: rotate(360deg); }
     }
 
-    /* Modal styles */
+    /* Modal styles - Mobile Friendly */
     .modal {
       display: none; 
       position: fixed;
@@ -102,40 +102,46 @@
       height: 100%;
       overflow: auto;
       background-color: rgba(0,0,0,0.5);
+      padding: 10px;
+      box-sizing: border-box;
     }
     .modal-content {
       background-color: #fff;
-      margin: 10% auto;
+      margin: auto;
       padding: 20px;
-      border: 1px solid #888;
       border-radius: 10px;
-      width: 80%;
-      max-width: 500px;
-      text-align: left;
+      width: 90%;
+      max-width: 400px;
+      text-align: center;
       position: relative;
+      animation: slideIn 0.3s ease-out;
+    }
+    @keyframes slideIn {
+      from { transform: translateY(50px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
     .close {
-      color: #aaa;
       position: absolute;
       right: 15px;
       top: 10px;
-      font-size: 28px;
+      font-size: 24px;
       font-weight: bold;
       cursor: pointer;
     }
-    .close:hover,
-    .close:focus {
-      color: black;
+    .close:hover {
+      color: red;
     }
-
-    /* Output list style in modal */
     .subject-list {
-      list-style-type: disc;
-      padding-left: 20px;
+      list-style-type: none;
+      padding: 0;
       margin-top: 15px;
+      font-size: 16px;
     }
     .subject-list li {
-      margin-bottom: 8px;
+      padding: 8px;
+      background: #f8f8f8;
+      margin: 5px 0;
+      border-radius: 5px;
     }
 
     /* Hide the canvas */
@@ -149,7 +155,6 @@
     <!-- Manual Calculation Section -->
     <div class="section">
       <h1>Bunk-o-Meter 🎓</h1>
-      <p style="margin-bottom: 10px;">Manual Input</p>
       <label for="total">Total Classes:</label>
       <input type="number" id="total" placeholder="e.g., 100">
       <label for="attended">Attended Classes:</label>
@@ -162,8 +167,7 @@
     <div class="section">
       <h2>Upload Attendance Table Image</h2>
       <p style="margin-bottom: 10px;">
-        Select an image containing columns like:<br>
-        (Code) Name Total Conducted Attended Missed 75%
+        You can get your attendance from here : <a href="https://adamasknowledgecity.ac.in/student/attendance">Click Here</a>
       </p>
       <input type="file" id="attendanceImage" accept="image/*">
       <button onclick="processTableImage()">Extract</button>
@@ -322,23 +326,32 @@
     }
 
     /********************************************************************
-     * Modal Popup Functions
+     * Modal Popup Functions (Mobile Friendly)
      ********************************************************************/
     function showModal(content) {
       const modal = document.getElementById('resultModal');
       const modalContent = document.getElementById('modalContent');
       modalContent.innerHTML = content;
-      modal.style.display = "block";
+      modal.style.display = 'flex'; // Use flex display for responsiveness
     }
+
     document.getElementById('modalClose').onclick = function() {
-      document.getElementById('resultModal').style.display = "none";
+      document.getElementById('resultModal').style.display = 'none';
     };
+
     window.onclick = function(event) {
       const modal = document.getElementById('resultModal');
-      if (event.target == modal) {
-        modal.style.display = "none";
+      if (event.target === modal) {
+        modal.style.display = 'none';
       }
     };
+
+    document.addEventListener("DOMContentLoaded", function () {
+      const modal = document.getElementById('resultModal');
+      modal.style.display = 'none';
+      modal.style.alignItems = 'center';
+      modal.style.justifyContent = 'center';
+    });
   </script>
 </body>
 </html>
