--- a/Bunk-o-Meter.html
+++ b/Bunk-o-Meter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bunk-o-Meter (Improved with Preprocessed OCR & Popup)</title>
+  <title>Bunk-o-Meter</title>
   <style>
     /* Overall body styling */
     body {
