--- a/Bunk-o-Meter.html
+++ b/Bunk-o-Meter.html
@@ -155,6 +155,7 @@
     <!-- Manual Calculation Section -->
     <div class="section">
       <h1>Bunk-o-Meter 🎓</h1>
+      <p>Created by:Aayush :)</p>
       <label for="total">Total Classes:</label>
       <input type="number" id="total" placeholder="e.g., 100">
       <label for="attended">Attended Classes:</label>
