--- a/Bunk-o-Meter.html
+++ b/Bunk-o-Meter.html
@@ -161,7 +161,7 @@
     <!-- Manual Calculation Section -->
     <div class="section">
       <h1 class="cool-animation">Bunk-o-Meter 🎓</h1>
-      <img src="/cat.png" height="100px" width="100px">
+      <img src="https://i.pinimg.com/736x/ba/92/7f/ba927ff34cd961ce2c184d47e8ead9f6.jpg" height="100px" width="100px">
       <p>Created by: Aayush </p>
       <label for="total">Total Classes:</label>
       <input type="number" id="total" placeholder="e.g., 100">
@@ -192,7 +192,7 @@
     <div class="modal-content">
       <span class="close" id="modalClose">&times;</span>
       <!-- Added cat image at the top of the popup -->
-      <img src="/cat.png" height="100px" width="100px">
+      <img src="https://i.pinimg.com/736x/ba/92/7f/ba927ff34cd961ce2c184d47e8ead9f6.jpg" height="100px" width="100px">
       <div id="modalContent"></div>
     </div>
   </div>
